fixes footer being hidden by mobile nav menu

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -407,9 +407,16 @@ footer {
 
 @media only screen and (max-width: 767px) {
   footer {
-    margin-bottom: 0;
     left: 0;
+    bottom: 6em;
+    /* margin-bottom: 0px; */
   }
+
+  .bottom-spacer {
+    margin-bottom: 0em !important;
+    padding-bottom: 6em !important;
+  }
+
 }
 
 #docs footer {
@@ -783,7 +790,7 @@ hr {
   .doc-content {
     margin-bottom: 3em;
     padding: 2em;
-    padding-bottom: 4em;
+    padding-bottom: 7em;
     padding-top: 0;
   }
 
